--- a/style.css
+++ b/style.css
@@ -221,6 +221,98 @@ body {
   height: 12rem;
 }
 
+/* section-2 */
+
+.section-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;
+  max-width: 1240px;
+  padding: 0px 20px;
+  margin: 6rem auto 1rem auto;
+}
+
+.section-2-details {
+  text-align: center;
+}
+
+.section-2-details h3 {
+  color: #0b0223;
+  font-family: Work Sans;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.section-2-details p,
+.section-2-img div p {
+  color: #534c64;
+  font-family: Work Sans;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.section-2-img {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: space-around;
+  max-width: 1200px;
+}
+
+.section-2-img div {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 18rem;
+}
+
+.section-2-img div img {
+  width: 18rem;
+}
+
+/* footer */
+
+footer {
+  margin-top: 4rem;
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  flex-direction: column;
+  padding: 5rem 6rem;
+  background: #0b0223;
+}
+
+footer .site-logo p {
+  color: #ffffff;
+}
+
+.type-1 {
+  color: #fff;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 1rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
+.type-2 {
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 1rem;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
 /* responsive design for tablet */
 
 @media (max-width: 768px) {
@@ -253,6 +345,11 @@ body {
   }
   .section-3-details h3 {
     font-size: 2.5rem;
+  }
+
+  .section-2-img {
+    gap: 2rem;
+    padding: 50px;
   }
 }
 
@@ -323,5 +420,14 @@ body {
   .section-3-details p,
   .section-3-details h3 {
     text-align: center;
+  }
+
+  .section-2-details h3 {
+    font-size: 2rem;
+  }
+
+  .section-2-details p,
+  .section-2-img div p {
+    font-size: 0.75rem;
   }
 }
